--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>html-css-checkpoint-1</title>
 <header> 
     <nav>
-        <a class="gr" href="home.html">HOME</a>
+        <a class="gr" href="index.html">HOME</a>
         <a class="wh" href="blog.html">BLOG</a>
     </nav>
 </header>
@@ -16,10 +16,10 @@
         <h2>Exercise One</h2>
         <P class="blank"> blank</P>
         <div class="details">
-            <span><img class="img" src="C:\Users\MOHIT\Documents\HTML-CSS-checkpoint-1.github.io\assests\media\color.png">#99D8CA</span>
-            <span><img class="img" src="C:\Users\MOHIT\Documents\HTML-CSS-checkpoint-1.github.io\assests\media\0D1430.png">#0D1430</span>
-            <span><img class="img" src="C:\Users\MOHIT\Documents\HTML-CSS-checkpoint-1.github.io\assests\media\90FFA9.png">#90FFA9</span>
-            <span><img class="img"class="img" src="C:\Users\MOHIT\Documents\HTML-CSS-checkpoint-1.github.io\assests\media\5873E2.png">#5873E2</span>
+            <span><img class="img" src="assests/media/color.png">#99D8CA</span>
+            <span><img class="img" src="assests/media/0D1430.png">#0D1430</span>
+            <span><img class="img" src="assests/media/90FFA9.png">#90FFA9</span>
+            <span><img class="img"class="img" src="assests\media\5873E2.png">#5873E2</span>
         </div>
     </section>
     <section class="second">
