--- a/blog.html
+++ b/blog.html
@@ -5,14 +5,14 @@
     <title>html-css-checkpoint-1</title>
 <header> 
     <nav>
-        <a class="gr" href="home.html">HOME</a>
+        <a class="gr" href="index.html">HOME</a>
         <a class="wh" href="blog.html">BLOG</a>
     </nav>
 </header>
 </head>    
 <body>
 <section class="upper">
-    <img src="C:\Users\MOHIT\Documents\HTML-CSS-checkpoint-1.github.io\assests\media\pic01.png" width="300px" height="\200px">
+    <img src="assests/media/pic01.png" width="300px" height="\200px">
     <div class="para1">
         <div class="inside">
     <h1>The standard Lorem Ispum passage,<br>used since 1500s</h1>
@@ -22,7 +22,6 @@
     expound the actual teachings of the great explorer of <br>
     the truth, the master-bulder of human happiness. No<br>
     one rejects, disllikes. or avoids pleasure itself.</p>
-    
     </p>
     </div>
     <button>
@@ -31,7 +30,7 @@
 </div>
 </section>
 <section class="medium">
-    <img src="C:\Users\MOHIT\Documents\HTML-CSS-checkpoint-1.github.io\assests\media\pic03.png">
+    <img src="assests\media\pic03.png">
 
 <h1>1914 translation by H.Rackham</h1>
 <p>But I must explain to you how all this mistaken idea of<br>
@@ -42,7 +41,7 @@
 
 
 <section class="end">
-    <img src="C:\Users\MOHIT\Documents\HTML-CSS-checkpoint-1.github.io\assests\media\pic02.png">
+    <img src="assests\media\pic02.png">
     <h1>Lorem Ispum is simply dummy text<br> of printing and typesetting</h1>
     <p>But I must explain to you how all this mistaken idea of<br>
         denouncing pleasure and praising pain was born and l.<br>
