--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,7 @@
     denouncing pleasure and praising pain was born and l.<br>
     will give you a complete account of the system
 <br><br><br></p>
+<nav class="learnmore"><a href="a">Learn More</a></nav>
 </section>
 
 
@@ -46,6 +47,7 @@
     <p>But I must explain to you how all this mistaken idea of<br>
         denouncing pleasure and praising pain was born and l.<br>
         will give you a complete account of the system</p>
+        <nav class="learnmore"><a href="a">Learn More</a></nav>
 </section>
 
 </body>
